--- a/html/index.html
+++ b/html/index.html
@@ -6,25 +6,40 @@
     <title>Bootstrap demo</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link href="static/main.css" rel="stylesheet">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.5.11/moment-timezone-with-data.js"></script>
 
-    <script src="static/dates.js" type="text/javascript"></script>
+    <script src="static/dates_new.js" type="text/javascript"></script>
   
   </head>
-  <body>
-    <div class="babies">
-    <img src="https://f003.backblazeb2.com/file/birthdaytwins/static/twins1.jpeg"> 
-    </div> 
+  <body onload="insertVars()">
 
-    <div class="countdown">
-     
-        <span id="days"></span>Tagen
-        <span id="hours"></span>Stunden
-        <span id="minutes"></span>Minuten
-        <span id="seconds"></span>Sekunden
-
-       
+  <div class="jahre">
+    <span id="years">"years"</span>
+      Jahre
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
-  </body>
+
+  <div class="monate">
+    <span id="months">"months"</span>
+      Monate
+    </div>
+
+  <div class="tage">
+    <span id="days">"days"</span>
+      Tage
+    </div>
+  
+  <div class="stunden">
+    <span id="hours">"hours"</span>
+      Stunden
+    </div>
+  
+  <div class="minuten">
+    <span id="minutes">"minutes"</span>
+      Minuten
+    </div>
+
+
+   </body>
 </html>
 
