--- a/html/index.html
+++ b/html/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
+    <meta name="viewport" content="user-scalable=no,width=device-width" />
+    <title>Birthday</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link href="static/main.css" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.js"></script>
@@ -13,7 +13,7 @@
   
   </head>
   <body onload="insertVars()">
-
+  <!--
   <div class="jahre">
     <span id="years">"years"</span>
       Jahre
@@ -38,7 +38,35 @@
     <span id="minutes">"minutes"</span>
       Minuten
     </div>
+-->
+  <div class="countdown">
+        <div class="box">
+            <span class="num" id="years">"hours"</span>
+            <span class="text">Jahre</span>
+        </div>
 
+       <div class="box">
+            <span class="num" id="months">"months"</span>
+            <span class="text">Monate</span>
+        </div>
+        <div class="box">
+            <span class="num" id="days">"days"</span>
+            <span class="text">Tage</span>
+        </div>
+        <div class="box">
+            <span class="num" id="hours">"hours"</span>
+            <span class="text">Stunden</span>
+        </div> 
+        <div class="box">
+            <span class="num" id="minutes">"minutes"</span>
+            <span class="text">Minuten</span>
+        </div> 
+         <!--
+        <div class="box">
+            <span class="num" id="seconds">"seconds"</span>
+            <span class="text">Sekunden</span>
+        </div> -->
+    </div>
 
    </body>
 </html>
