--- a/index.html
+++ b/index.html
@@ -26,6 +26,24 @@
     Samstag, 15.10.2022 <br> 14:20 Uhr
     </div>
 
+    <div class="nameday_box">
+        <div class="badge text-wrap badge-nameday" style="width: 12rem">
+        Namenstag Johanne
+        </div>
+
+        <div class="badge text-wrap badge-nameday" style="width: 12rem">
+        Namenstag Lukas
+        </div>
+    </div>
+
+    <div class="nameday_dates">
+        <div class="badge text-center badge-time-nameday" style="width: 12rem;">
+        12. Juli
+        </div>
+        <div class="badge text-center badge-time-nameday" style="width: 12rem;">
+        18. Oktober
+        </div>
+    </div>
 
     <div class="badge badge-primary text-center badge-age" style="width: 12rem">
     Alter
