--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
   <div class="countdown">
         <div class="box">
-            <span class="num" id="years">"hours"</span>
+            <span class="num" id="years">"years"</span>
             <span class="text">Jahre</span>
         </div>
 
@@ -64,6 +64,7 @@
             <span class="num" id="days">"days"</span>
             <span class="text">Tage</span>
         </div>
+         <!--
         <div class="box">
             <span class="num" id="hours">"hours"</span>
             <span class="text">Stunden</span>
@@ -72,13 +73,23 @@
             <span class="num" id="minutes">"minutes"</span>
             <span class="text">Minuten</span>
         </div> 
-         <!--
+        
         <div class="box">
             <span class="num" id="seconds">"seconds"</span>
             <span class="text">Sekunden</span>
         </div> -->
     </div>
 
+    <div class="badge badge-primary text-center badge-age" style="width: 12rem">
+        enspricht
+    </div>
+
+    <div class="countdown">
+        <div class="box">
+            <span class="num" id="weeks">"hours"</span>
+            <span class="text">Wochen</span>
+        </div>
+        </div>
    </body>
 </html>
 
