namenstag johanne geaendert

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
     <div class="nameday_dates">
         <div class="badge text-center badge-time-nameday" style="width: 12rem;">
-        26. Juli
+        30. Mai
         </div>
         <div class="badge text-center badge-time-nameday" style="width: 12rem;">
         18. Oktober
