--- a/index.html
+++ b/index.html
@@ -89,7 +89,15 @@
             <span class="num" id="weeks">"hours"</span>
             <span class="text">Wochen</span>
         </div>
+    </div>
+
+   <div class="countdown" style="margin-top: 3rem;">
+        <div class="box">
+            <span class="num" id="month">"month"</span>
+            <span class="text">Monate</span>
         </div>
+    </div>
+
    </body>
 </html>
 
