--- a/index.html
+++ b/index.html
@@ -91,6 +91,10 @@
         </div>
     </div>
 
+    <div class="badge badge-primary text-center badge-age" style="margin-top: -3rem; width: 12rem">
+        bzw.
+    </div>
+
    <div class="countdown" style="margin-top: 1rem;">
         <div class="box">
             <span class="num" id="month">"month"</span>
